@@ -5,6 +5,9 @@
 # $Id$
 #
 # $Log$
+# Revision 1.16  2004/09/10 19:24:18  jimmyo
+# Added new option "graph_sums" which creates summarised graphs.
+#
 # Revision 1.15  2004/09/08 15:25:33  ilmari
 # Use @@PERL@@ in all perl shebang lines.
 #
@@ -786,16 +789,16 @@ sub config_node {
 			(defined $node->{client}->{$servname}->{"$client.min"} ? 
 			 $node->{client}->{$servname}->{"$client.min"} :
 			 "U") . ":" . ($node->{client}->{$servname}->{"$client.max"} || "U"),
-			"RRA:AVERAGE:0.5:1:576",
+			"RRA:AVERAGE:0.5:1:576", # resolution 5 minutes
 			"RRA:MIN:0.5:1:576",
 			"RRA:MAX:0.5:1:576",
-			"RRA:AVERAGE:0.5:6:432", # 9 days
+			"RRA:AVERAGE:0.5:6:432", # 9 days, resolution 30 minutes
 			"RRA:MIN:0.5:6:432",
 			"RRA:MAX:0.5:6:432",
-			"RRA:AVERAGE:0.5:24:540", # 45 days
+			"RRA:AVERAGE:0.5:24:540", # 45 days, resolution 2 hours
 			"RRA:MIN:0.5:24:540",
 			"RRA:MAX:0.5:24:540",
-			"RRA:AVERAGE:0.5:288:450", # 450 days
+			"RRA:AVERAGE:0.5:288:450", # 450 days, resolution 1 day
 			"RRA:MIN:0.5:288:450",
 			"RRA:MAX:0.5:288:450");
 	  if (my $ERROR = RRDs::error) {
