@@ -8,6 +8,7 @@ munin (work)
   * Changes of min and max values now causes corresponding changes in 
     the RRD files.
   * Use @@PERL@@ in all perl shebang lines.
+  * Added new option "graph_sums" which creates summarised graphs.
 
 munin (1.1.4)
 
